// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar component renders an avatar when the component is mounted 1`] = `
<a class="inline-block rounded-full bg-ink-300 p-0.5">
  <!----> <span class="flex items-center justify-center text-center rounded-full bg-ink-200 text-vanilla-300 leading-none h-8 w-8 text-sm">
      JD
    </span>
</a>
`;

exports[`Avatar component renders avatar correctly, when image is given 1`] = `
<a class="inline-block rounded-full bg-ink-300 p-0.5"><img src="https://example.com/some.jpg" alt="John Doe" class="rounded-full leading-none h-8 w-8 text-sm">
  <!---->
</a>
`;

exports[`Avatar component renders avatar correctly, when image is not given 1`] = `
<a class="inline-block rounded-full bg-ink-300 p-0.5">
  <!----> <span class="flex items-center justify-center text-center rounded-full bg-ink-200 text-vanilla-300 leading-none h-8 w-8 text-sm">
      JD
    </span>
</a>
`;

exports[`Avatar component renders avatar correctly, when size is given 1`] = `
<a class="inline-block rounded-full bg-ink-300 p-0.5">
  <!----> <span class="flex items-center justify-center text-center rounded-full bg-ink-200 text-vanilla-300 leading-none h-6 w-6 text-xs">
      JD
    </span>
</a>
`;

exports[`Avatar component renders avatar with skeleton gradient background when loading is true 1`] = `<a class="inline-block rounded-full bg-ink-300 p-0.5"><span class="flex items-center justify-center text-center rounded-full bg-gradient-skeleton text-vanilla-300 leading-none h-8 w-8 text-sm"></span></a>`;

exports[`Avatar component renders fallback image 1`] = `
<a class="inline-block rounded-full bg-ink-300 p-0.5"><img src="https://example.com/some.jpg" alt="John Doe" class="rounded-full leading-none h-8 w-8 text-sm">
  <!---->
</a>
`;

exports[`Avatar component renders root element as a link for avatar with no props 1`] = `
<a class="inline-block rounded-full bg-ink-300 p-0.5">
  <!----> <span class="flex items-center justify-center text-center rounded-full bg-ink-200 text-vanilla-300 leading-none h-8 w-8 text-sm">
      JD
    </span>
</a>
`;

exports[`Avatar component renders root element as a span for avatar with type prop \`span\` 1`] = `
<span class="inline-block rounded-full bg-ink-300 p-0.5"><!----> <span class="flex items-center justify-center text-center rounded-full bg-ink-200 text-vanilla-300 leading-none h-8 w-8 text-sm">
      JD
    </span></span>
`;
